--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "file-saver": "^2.0.5",
     "nodemon": "^3.1.9"
   }
 }
